Correction bug
Déplacement diagonale,
id manquant,
modification des substring en split,
les agent ramasseur reviennent à la base et reparte en mission ensuite